fix: 참여한 챌린지 목록에서 참여 여부(joined) 반영되도록 서비스 로직 수정